<resources>
    <string name="app_name">Shiftter</string>
    <string name="title_activity_btn_format">btnFormat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_shifts">ShiftsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_shifts">Shifts</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_personal_details">Personal Details</string>
    <string name="menu_logout">Log Out</string>
</resources>
