<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/nav_shifts"
            android:icon="@drawable/ic_toc_black_24dp"
            android:title="@string/menu_shifts" />
    </group>

    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/nav_personal_details"
                android:icon="@drawable/ic_edit_black_24dp"
                android:title="@string/menu_personal_details" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
